--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@ html, body {
 }
 
 $blue: #193d54;
+$block-max-width: 820px;
 
 /* Global classes. */
 
@@ -26,6 +27,10 @@ $blue: #193d54;
   flex-grow: 1;
 }
 
+.content-header {
+  font-size: 37px;
+}
+
 .background-one {
   background-color: #fa6182;
   .block-title {
@@ -34,7 +39,6 @@ $blue: #193d54;
   }
   .content-header {
     color: #fff;
-    font-size: 40px; 
   }
 }
 
@@ -46,7 +50,6 @@ $blue: #193d54;
   }
   .content-header {
     color: #193d54;
-    font-size: 40px; 
   }
 }
 
@@ -58,6 +61,16 @@ $blue: #193d54;
   }
   .content-header {
     color: #fff;
-    font-size: 40px; 
+  }
+}
+
+.background-four {
+  background-color: #14B0BF;
+  .block-title {
+    color: #fff;
+    text-shadow: 3px 3px $blue;
+  }
+  .content-header {
+    color: $blue;
   }
 }
