All content for identity management project.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -73,4 +73,10 @@ $block-max-width: 820px;
   .content-header {
     color: $blue;
   }
+  .divider-line {
+    height: 2px;
+    width: 100%;
+    background-color: $blue;
+    margin: 30px 0 15px 0;
+  }
 }
