--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -80,3 +80,14 @@ $block-max-width: 820px;
     margin: 30px 0 15px 0;
   }
 }
+
+.background-five {
+  background-color: #fff;
+  .block-title {
+    color: #FD5F80;
+    text-shadow: 3px 3px #d5d5d5;
+  }
+  .content-header {
+    color: #193d54;
+  }
+}
