--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 @import 'mixins/mixins';
 
 html, body {
-  font-family: 'Roboto';
+  font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   position: relative;
   width: 100%;
@@ -15,6 +15,7 @@ html, body {
   }
 }
 
+$pink: #FD5F80;
 $blue: #193d54;
 $block-max-width: 820px;
 
@@ -32,7 +33,8 @@ $block-max-width: 820px;
 }
 
 .background-one {
-  background-color: #fa6182;
+  background-color: $pink;
+  color: #fff;
   .block-title {
     color: #fff;
     text-shadow: 3px 3px #549aae;
@@ -46,7 +48,7 @@ $block-max-width: 820px;
   background-color: #fff;
   .block-title {
     color: #193d54;
-    text-shadow: 3px 3px #fa6182;
+    text-shadow: 3px 3px $pink;
   }
   .content-header {
     color: #193d54;
@@ -55,9 +57,10 @@ $block-max-width: 820px;
 
 .background-three {
   background-color: $blue;
+  color: #fff;
   .block-title {
     color: #fff;
-    text-shadow: 3px 3px #fa6182;
+    text-shadow: 3px 3px $pink;
   }
   .content-header {
     color: #fff;
@@ -66,12 +69,13 @@ $block-max-width: 820px;
 
 .background-four {
   background-color: #14B0BF;
+  color: #fff;
   .block-title {
     color: #fff;
-    text-shadow: 3px 3px $blue;
+    text-shadow: 3px 3px $pink;
   }
   .content-header {
-    color: $blue;
+    color: #fff;
   }
   .divider-line {
     height: 2px;
