--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,10 +37,19 @@ $block-max-width: 820px;
   color: #fff;
   .block-title {
     color: #fff;
-    text-shadow: 3px 3px #549aae;
+    text-shadow: 3px 3px #1C4966;
   }
   .content-header {
     color: #fff;
+    &:after {
+      display: block;
+      content: "";
+      background-image: url('./assets/images/squiggles/squiggle.svg');
+      background-size: 85px 30px;
+      height: 30px;
+      width: 85px;
+      margin-bottom: 22px;
+    }
   }
 }
 
@@ -52,6 +61,15 @@ $block-max-width: 820px;
   }
   .content-header {
     color: #193d54;
+    &:after {
+      display: block;
+      content: "";
+      background-image: url('./assets/images/squiggles/squiggle.svg');
+      background-size: 85px 30px;
+      height: 30px;
+      width: 85px;
+      margin-bottom: 22px;
+    }
   }
 }
 
@@ -64,6 +82,15 @@ $block-max-width: 820px;
   }
   .content-header {
     color: #fff;
+    &:after {
+      display: block;
+      content: "";
+      background-image: url('./assets/images/squiggles/squiggle_w.svg');
+      background-size: 85px 30px;
+      height: 30px;
+      width: 85px;
+      margin-bottom: 22px;
+    }
   }
 }
 
@@ -76,12 +103,15 @@ $block-max-width: 820px;
   }
   .content-header {
     color: #fff;
-  }
-  .divider-line {
-    height: 2px;
-    width: 100%;
-    background-color: $blue;
-    margin: 30px 0 15px 0;
+    &:after {
+      display: block;
+      content: "";
+      background-image: url('./assets/images/squiggles/squiggle_w.svg');
+      background-size: 85px 30px;
+      height: 30px;
+      width: 85px;
+      margin-bottom: 22px;
+    }
   }
 }
 
@@ -93,6 +123,15 @@ $block-max-width: 820px;
   }
   .content-header {
     color: #193d54;
+    &:after {
+      display: block;
+      content: "";
+      background-image: url('./assets/images/squiggles/squiggle.svg');
+      background-size: 85px 30px;
+      height: 30px;
+      width: 85px;
+      margin-bottom: 22px;
+    }
   }
 }
 
@@ -104,6 +143,15 @@ $block-max-width: 820px;
   }
   .content-header {
     color: #193d54;
+    &:after {
+      display: block;
+      content: "";
+      background-image: url('./assets/images/squiggles/squiggle.svg');
+      background-size: 85px 30px;
+      height: 30px;
+      width: 85px;
+      margin-bottom: 22px;
+    }
   }
 }
 
@@ -116,5 +164,14 @@ $block-max-width: 820px;
   }
   .content-header {
     color: #fff;
+    &:after {
+      display: block;
+      content: "";
+      background-image: url('./assets/images/squiggles/squiggle_w.svg');
+      background-size: 85px 30px;
+      height: 30px;
+      width: 85px;
+      margin-bottom: 22px;
+    }
   }
 }
